--- a/.editorconfig
+++ b/.editorconfig
@@ -40,14 +40,19 @@ resharper_autodetect_indent_settings=true
 resharper_braces_for_ifelse=required_for_multiline_statement
 resharper_csharp_insert_final_newline=true
 resharper_enforce_line_ending_style=true
+resharper_local_function_body=expression_body
 resharper_max_attribute_length_for_same_line=38
+resharper_method_or_operator_body=expression_body
 resharper_place_accessorholder_attribute_on_same_line=false
 resharper_place_field_attribute_on_same_line=false
 resharper_space_within_single_line_array_initializer_braces=true
+resharper_use_heuristics_for_body_style=true
 resharper_use_indent_from_vs=false
 
 # ReSharper inspection severities
 resharper_arrange_attributes_highlighting=hint
+resharper_arrange_constructor_or_destructor_body_highlighting=suggestion
+resharper_arrange_local_function_body_highlighting=suggestion
 resharper_arrange_redundant_parentheses_highlighting=hint
 resharper_arrange_this_qualifier_highlighting=hint
 resharper_arrange_type_member_modifiers_highlighting=hint
