--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Autofac" Version="6.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     </ItemGroup>
 
