--- a/MVC/appsettings.json
+++ b/MVC/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=True;MultipleActiveResultSets=True;Database=JobDatabase;Trusted_Connection=True;"
+        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Integrated Security=True;MultipleActiveResultSets=True;Database=JobDatabase;Trusted_Connection=True;"
     },
     "Logging": {
         "LogLevel": {
