--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -27,6 +27,10 @@
     <Compile Remove="Migrations\20210109171807_RelationshipFix.Designer.cs" />
     <Compile Remove="Migrations\20210109172117_RelationshipFix.cs" />
     <Compile Remove="Migrations\20210109172117_RelationshipFix.Designer.cs" />
+    <Compile Remove="Migrations\20210111172536_cascade.cs" />
+    <Compile Remove="Migrations\20210111172536_cascade.Designer.cs" />
+    <Compile Remove="Migrations\20210111174419_cascade.cs" />
+    <Compile Remove="Migrations\20210111174419_cascade.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
