--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
         <PackageReference Include="Autofac" Version="6.1.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.11" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
         <PackageReference Include="System.Text.Json" Version="5.0.1" />
     </ItemGroup>
